# dlwp-benchmark

./: .gitignore  README.md  THIRD-PARTY-LICENSES.txt  pyproject.toml
src/dlwpbench/: README.md
src/dlwpbench/configs/: config.yaml
src/dlwpbench/configs/data/: example.yaml  prototyping.yaml  weatherbench.yaml  weatherbench_full.yaml
src/dlwpbench/configs/model/: convlstm.yaml  distana.yaml  fno.yaml  fourcastnet.yaml  fourcastnetv2.yaml  graphcast.yaml  meshgraphnet.yaml  panguweather.yaml  sfno.yaml  swintransformer.yaml  unet.yaml
src/dlwpbench/configs/testing/: default.yaml
src/dlwpbench/configs/training/: default.yaml
src/dlwpbench/configs/validation/: default.yaml
src/dlwpbench/data/datasets/: __init__.py  datasets.py  datasets_candidates.py
src/dlwpbench/data/processing/: healpix_mapping.py  istarmap.py  nc_to_zarr.py  utils.py
src/dlwpbench/models/: __init__.py
src/dlwpbench/models/convlstm/: convlstm.py
src/dlwpbench/models/fno/: fno.py
src/dlwpbench/models/fourcastnet/: fourcastnet.py
src/dlwpbench/models/graphcast/: __init__.py  graph_cast_net.py  graph_cast_processor.py
src/dlwpbench/models/mgn/: meshgraphnet.py
src/dlwpbench/models/panguweather/: panguweather.py
src/dlwpbench/models/swintransformer/: swin_transformer.py
src/dlwpbench/models/unet/: unet.py
src/dlwpbench/scripts/: build_baselines.py  evaluate.py  plot_results.py  train.py
src/dlwpbench/utils/: __init__.py  healpix.py  utils.py
src/nsbench/: README.md
src/nsbench/configs/: config.yaml
src/nsbench/configs/data/: exploration.yaml  navier-stokes_s256_r1e4.yaml  navier-stokes_s64.yaml  navier-stokes_s64_r1e4.yaml
src/nsbench/configs/model/: convlstm.yaml  fno.yaml  fourcastnet.yaml  graphcast_ns.yaml  meshgraphnet.yaml  swintransformer.yaml  unet.yaml
src/nsbench/configs/testing/: default.yaml
src/nsbench/configs/training/: default.yaml
src/nsbench/models/: __init__.py
src/nsbench/scripts/: build_persistence.py  evaluate.py  plot_results.py  train.py  train_commands.txt
src/nsbench/utils/: utils.py
(+42 files in other folders)
