[project]
name = "Deep-Learning-Weather-Prediction-Benchmark"
version = "0.0.1"
authors = [
  { name="Matthias Karlbauer", email="matthias.karlbauer@uni-tuebingen.de" }
]
description = "Package to benchmark various deep learning architecture on Navier-Stokes and the WeatherBench datasets."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
	"torch==2.2.1",
  "torchvision==0.17.1",
  "torchinfo==1.8.0",
  "numpy==1.26",
  "hydra-core==1.3.2",
  "tensorboard==2.17.0",
  "xarray[complete]==2024.7.0",
  "tqdm==4.66.4",
  "einops==0.8.0",
  "timm==1.0.8",
  "dgl==1.1.2.post1",
  "s3fs==2024.6.1",
  "scikit-learn==1.5.1",
  "scipy==1.13.1",
  "ecmwflibs==0.6.3",
  "healpy==1.16.6",
  "reproject==0.14.0",
  "pydantic==2.8.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dlwpbench"]

[project.urls]
Homepage = "https://github.com/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
